tests/snapshots/cli__activity_reactions_remove.snap
---
source: tests/cli.rs
expression: help
---
Remove one Unicode emoji reaction or the special `like` target

Usage: remove [OPTIONS] <ACTIVITY_ID> <REACTION>

Arguments:
  <ACTIVITY_ID>
          Canonical activity ID

  <REACTION>
          Exact emoji glyph or lowercase `like` target to remove

Options:
      --yes
          Skip only the final default-No confirmation

      --dry-run
          Complete preflight and show details without removing the reaction

  -h, --help
          Print help (see a summary with '-h')

REACTION must be exact lowercase 'like' or exactly match one Unicode emoji reaction already applied by the authenticated account; backend custom aliases shown by list are read-only. The 'like' target uses Venmo's likes endpoint, while ❤️ uses its reactions endpoint; removing either clears the same server state. The command performs an authoritative activity preflight and never retries automatically. Exit code 3 means the reaction outcome must be verified independently.
