tests/snapshots/cli__auth.snap
---
source: tests/cli.rs
expression: help
---
Validate and manage the stored Venmo bearer token

Usage: auth <COMMAND>

Commands:
  login   Authenticate with a newly supplied trusted device and password/SMS OTP
  logout  Remove the local credential without revoking the remote token
  status  Validate the credential and show the active account
  help    Print this message or the help of the given subcommand(s)

Options:
  -h, --help
          Print help
