tests/snapshots/cli__auth_logout.snap
---
source: tests/cli.rs
expression: help
---
Remove the local credential without revoking the remote token

Usage: logout

Options:
  -h, --help
          Print help (see a summary with '-h')

Deletes local credential state from the selected store. When a keyring is available, it also removes any superseded XDG fallback. It does not contact Venmo or revoke the remote bearer token.
