tests/snapshots/cli__auth_reauthenticate.snap
---
source: tests/cli.rs
expression: help
---
Replace an expired token using the stored trusted device and password/SMS OTP

Usage: reauthenticate

Options:
  -h, --help
          Print help (see a summary with '-h')

Uses the device ID from the one readable stored credential and never prompts for or prints it. Account identifier, password, and an SMS code for the exact recognized challenge are entered only through interactive prompts. This performs a full password login, not a token refresh.
