tests/snapshots/cli__auth_status.snap
---
source: tests/cli.rs
expression: help
---
Validate the credential and show the active account

Usage: status

Options:
  -h, --help
          Print help
