tests/snapshots/cli__balance.snap
---
source: tests/cli.rs
expression: help
---
Show the Venmo wallet balance

Usage: balance

Options:
  -h, --help
          Print help
