tests/snapshots/cli__doctor.snap
---
source: tests/cli.rs
expression: help
---
Run read-only diagnostics

Usage: doctor

Options:
  -h, --help
          Print help
